polybot/polybot-deployment.yaml
apiVersion: apps/v1

kind: Deployment

metadata:

  name: polybot-deployment

spec:

  replicas: 2

  selector:

    matchLabels:

      app: polybot

  template:

    metadata:

      labels:

        app: polybot

    spec:

      containers:

        - name: polybot

          image: "docker.io/berko1/polybotk:latest"

          ports:

            - containerPort: 8443

      imagePullSecrets:

        - name: dockerhub-secret
