polybot/polybot-service.yaml
cat polybot-service.yaml 

apiVersion: v1

kind: Service

metadata:

  name: polybot

spec:

  selector:

    app: polybot

  ports:

    - protocol: TCP

      port: 8443

      targetPort: 8443

  type: ClusterIP
